--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Headings</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1 class="heading1">Heading 1</h1>
+    <h2 class="heading2">Heading 2</h2>
+    <h3 class="heading3">Heading 3</h3>
+    <h4 class="heading4">Heading 4</h4>
+    <h5 class="heading5">Heading 5</h5>
+    <h6 class="heading6">Heading 6</h6>
 </body>
-
 </html>
